Misc. padding/alignment fixes

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -7,9 +7,11 @@ body
   height: 100%
   min-height: 100vh
 
-  &.no-scroll
+  &.overlay-open
+    height: 100vh
+    width: 100vw
     overflow: hidden
-    position: relative
+    overscroll-behavior: none
 
 a.skip-link
   +transition(all .3s)
@@ -38,12 +40,12 @@ a, a:visited
   background-color: var(--button-background-color)
   border-radius: var(--border-radius)
   color: var(--button-text-color)
-  height: 60px
+  min-height: 60px
   display: flex
   align-items: center
   justify-content: center
   max-width: 275px
-  padding: 0 20px
+  padding: 16px 20px
   text-align: center
   white-space: pre-wrap
   width: 100%
@@ -141,7 +143,9 @@ h1
 
 a.store-link
   color: var(--shop-name-text-color)
-  display: block
+  display: flex
+  align-items: center
+  justify-content: center
   font-family: var(--shop-name-font)
   font-size: 2.5em
   line-height: 1.3
